Added some to notebook to look at intense and mild swears

--- a/swear_analysis.ipynb
+++ b/swear_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -89,8 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_closest_words_score_latex(vectors, targets):\n",
@@ -681,118 +683,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'dang':\n",
-      "\tdarn : 0.713\n",
-      "\tdamn : 0.690\n",
-      "\tgosh : 0.627\n",
-      "\tfreaking : 0.618\n",
-      "\tsoo : 0.617\n",
-      "\tfreakin : 0.615\n",
-      "\tfriggin : 0.611\n",
-      "\tdarned : 0.602\n",
-      "\tyah : 0.593\n",
-      "\tgoddamn : 0.577\n",
-      "'darn':\n",
-      "\tdarned : 0.842\n",
-      "\tdamn : 0.804\n",
-      "\tfreaking : 0.730\n",
-      "\tdang : 0.713\n",
-      "\tsoooo : 0.702\n",
-      "\tfreakin : 0.697\n",
-      "\tfriggin : 0.694\n",
-      "\tpretty : 0.683\n",
-      "\tawfully : 0.680\n",
-      "\tsooo : 0.671\n",
-      "'heck':\n",
-      "\tyeah : 0.750\n",
-      "\thell : 0.717\n",
-      "\tdamn : 0.717\n",
-      "\tmaybe : 0.716\n",
-      "\tanyway : 0.711\n",
-      "\tguess : 0.710\n",
-      "\tthing : 0.700\n",
-      "\tthink : 0.699\n",
-      "\tthats : 0.699\n",
-      "\twondering : 0.692\n",
-      "'gosh':\n",
-      "\tgeez : 0.719\n",
-      "\tjeez : 0.699\n",
-      "\tgawd : 0.699\n",
-      "\tomg : 0.695\n",
-      "\tohh : 0.680\n",
-      "\tohhh : 0.679\n",
-      "\tahhh : 0.671\n",
-      "\tahh : 0.666\n",
-      "\tdarn : 0.657\n",
-      "\tugh : 0.656\n",
-      "'jeez':\n",
-      "\tgeez : 0.911\n",
-      "\tgeeze : 0.787\n",
-      "\tjeeze : 0.743\n",
-      "\tsheesh : 0.722\n",
-      "\tdamnit : 0.700\n",
-      "\tgosh : 0.699\n",
-      "\tummm : 0.686\n",
-      "\tdammit : 0.682\n",
-      "\tc'mon : 0.674\n",
-      "\twoah : 0.667\n",
-      "'hella':\n",
-      "\tsoooo : 0.571\n",
-      "\tsooo : 0.569\n",
-      "\tsooooo : 0.564\n",
-      "\tfuckin : 0.562\n",
-      "\tfreakin : 0.542\n",
-      "\tsoooooo : 0.539\n",
-      "\tgettin : 0.536\n",
-      "\tdamn : 0.524\n",
-      "\tkinda : 0.520\n",
-      "\tsoo : 0.514\n"
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l } \n",
+      "\\hline\n",
+      "Word & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{dang} & darn, damn, gosh, freaking, soo, freakin, friggin, darned, yah, goddamn \\\\\n",
+      "\\textbf{darn} & darned, damn, freaking, dang, soooo, freakin, friggin, pretty, awfully, sooo \\\\\n",
+      "\\textbf{heck} & yeah, hell, damn, maybe, anyway, guess, thing, think, thats, wondering \\\\\n",
+      "\\textbf{gosh} & geez, jeez, gawd, omg, ohh, ohhh, ahhh, ahh, darn, ugh \\\\\n",
+      "\\textbf{jeez} & geez, geeze, jeeze, sheesh, damnit, gosh, ummm, dammit, c'mon, woah \\\\\n",
+      "\\textbf{hella} & soooo, sooo, sooooo, fuckin, freakin, soooooo, gettin, damn, kinda, soo \\\\\n",
+      "\\textbf{freaking} & freakin, friggin, damn, effing, goddamn, fcking, fuckin, darn, frickin, fking \\\\\n",
+      "\\textbf{damn} & freaking, thats, darn, shit, yeah, stupid, cuz, freakin, lol, fuckin \\\\\n",
+      "\\textbf{shit} & crap, fuckin, damn, cuz, thats, lol, dude, fuck, stupid, sht \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
      ]
     }
    ],
    "source": [
-    "targets_mild = [\"dang\", \"darn\", \"heck\", \"gosh\", \"jeez\", \"hella\", \"freaking\"]\n",
-    "print_closest_words(glove42, targets_mild)"
+    "targets_mild = [\"dang\", \"darn\", \"heck\", \"gosh\", \"jeez\", \"hella\", \"freaking\", \"damn\", \"shit\"]\n",
+    "print_closest_words_latex(glove42, targets_mild)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'queer':\n",
-      "\tfag : 0.556\n",
-      "\tfaggot : 0.526\n",
-      "\tfeminist : 0.510\n",
-      "\tgay : 0.507\n",
-      "\tcunt : 0.487\n",
-      "\tnerd : 0.476\n",
-      "\twhore : 0.472\n",
-      "\tdork : 0.469\n",
-      "\tfagget : 0.461\n",
-      "\tlesbian : 0.460\n"
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l } \n",
+      "\\hline\n",
+      "Word & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{dang} & damn, dam, nahh, soo, nah, huh, idk, gah, noh, lol \\\\\n",
+      "\\textbf{darn} & friggin, freakin, effing, freaking, fricken, gosh, goddamn, effin, frickin, fucken \\\\\n",
+      "\\textbf{heck} & hell, wth, jeez, gosh, dammit, woah, damn, kidding, crap, yeah \\\\\n",
+      "\\textbf{gosh} & omfg, omg, ohmygod, ugh, srsly, jeez, omgg, freaking, dammit, seriously \\\\\n",
+      "\\textbf{jeez} & geez, sheesh, gosh, geeze, jeeez, geesh, damnit, heck, dammit, woah \\\\\n",
+      "\\textbf{hella} & mad, shits, kinda, gettin, lowkey, fuckin, damn, dumb, slick, alot \\\\\n",
+      "\\textbf{freaking} & freakin, fricken, effing, fucking, fucken, friggin, frickin, seriously, gosh, fricking \\\\\n",
+      "\\textbf{damn} & shit, hell, fuck, fuckin, thats, stupid, like, fucking, smh, dude \\\\\n",
+      "\\textbf{shit} & fuck, damn, hell, bitch, like, nigga, that, dude, thats, smh \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
      ]
     }
    ],
    "source": [
-    "print_closest_words(twitter100, ['queer'])"
+    "print_closest_words_latex(twitter100, targets_mild)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l } \n",
+      "\\hline\n",
+      "Word & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{damn} & freaking, thats, darn, shit, yeah, stupid, cuz, freakin, lol, fuckin \\\\\n",
+      "\\textbf{shit} & crap, fuckin, damn, cuz, thats, lol, dude, fuck, stupid, sht \\\\\n",
+      "\\textbf{fuck} & fucking, ass, fucked, suck, bitch, pussy, shit, fucks, slut, horny \\\\\n",
+      "\\textbf{bitch} & bitches, fuck, ass, whore, slut, fucking, shit, fucker, suck, asshole \\\\\n",
+      "\\textbf{cunt} & pussy, twat, asshole, cunts, cock, ass, fucking, clit, slut, fuck \\\\\n",
+      "\\textbf{dick} & cock, dicks, sucking, suck, ass, pussy, fucking, fuck, cocks, cunt \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "targets_intense = [\"damn\",\"shit\",\"fuck\", \"bitch\", \"cunt\", \"dick\"]\n",
+    "print_closest_words_latex(glove42, targets_intense)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l } \n",
+      "\\hline\n",
+      "Word & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{damn} & shit, fuckin, fuck, smh, hell, fucking, lmao, that, why, thats \\\\\n",
+      "\\textbf{shit} & fuck, damn, that, nigga, hell, thats, bitch, like, smh, lmao \\\\\n",
+      "\\textbf{fuck} & shit, hell, bitch, fucking, damn, wtf, fuckin, n't, that, nigga \\\\\n",
+      "\\textbf{bitch} & nigga, fuck, ass, bitches, hoe, shit, girl, fuckin, damn, cuz \\\\\n",
+      "\\textbf{cunt} & twat, prick, bastard, cunts, wanker, dickhead, faggot, fucker, asshole, bellend \\\\\n",
+      "\\textbf{dick} & suck, ass, cock, pussy, bitch, dicks, nigga, penis, asshole, fuck \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_closest_words_latex(twitter200, targets_intense)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "file = open(\"data/swearWords.csv\", \"r\") # from http://www.bannedwordlist.com\n",
@@ -1583,29 +1605,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'http://yago-knowledge.org/resource/wikicategory_living_people':\n",
-      "\thttp://yago-knowledge.org/resource/wordnet_person_100007846 : 0.842\n",
-      "\thomebiologymedicinetechnologyproduct : 0.831\n",
-      "\t2/0m : 0.829\n",
-      "\tcrossed-flag-pins : 0.815\n",
-      "\ttexasstar7 : 0.803\n",
-      "\tpuzzeljac : 0.778\n",
-      "\tborder='0' : 0.777\n",
-      "\tschool-spon : 0.777\n",
-      "\t01/21/92 : 0.769\n",
-      "\tdesigner_rants : 0.767\n"
+      "'heck':\n",
+      "\tyeah : 0.750\n",
+      "\thell : 0.717\n",
+      "\tdamn : 0.717\n",
+      "\tmaybe : 0.716\n",
+      "\tanyway : 0.711\n",
+      "\tguess : 0.710\n",
+      "\tthing : 0.700\n",
+      "\tthink : 0.699\n",
+      "\tthats : 0.699\n",
+      "\twondering : 0.692\n"
      ]
     }
    ],
    "source": [
-    "print_closest_words(glove42, [\"http://yago-knowledge.org/resource/wikicategory_living_people\"])"
+    "print_closest_words(glove42, [\"heck\"])"
    ]
   },
   {
