Most recent update on swear analysis notebook

--- a/swear_analysis.ipynb
+++ b/swear_analysis.ipynb
@@ -127,6 +127,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_closest_words_analogy_latex(vectors, pos = [[]], neg = [[]]):\n",
+    "    print(\"\\\\begin{center}\")\n",
+    "    print(\"\\\\begin{tabular}{ l l l } \")\n",
+    "    print(\"\\\\hline\")\n",
+    "    print(\"Positives & Negatives & Neighbors  \\\\\\\\\")\n",
+    "    print(\"\\\\hline\")\n",
+    "    for i in range(len(pos)):\n",
+    "        # first add the positives\n",
+    "        row_str = \"\"\n",
+    "        if len(pos[i]) == 0:\n",
+    "            row_str += \"\\\\textit{NONE} &\"\n",
+    "        else:\n",
+    "            for p in pos[i]:\n",
+    "                row_str += \"\\\\textbf{%s}, \" %p\n",
+    "            row_str = \"%s & \"%row_str[:-2]\n",
+    "            \n",
+    "        # next add the negatives in the same way\n",
+    "\n",
+    "\n",
+    "        if len(neg[i]) == 0:\n",
+    "            row_str += \"\\\\textit{NONE} &\"\n",
+    "        else:\n",
+    "            for n in neg[i]:\n",
+    "                row_str += \"\\\\textbf{%s}, \" %n\n",
+    "            row_str = \"%s & \"%row_str[:-2]\n",
+    "        \n",
+    "        closest = None\n",
+    "        if (len(neg[i]) == 0):\n",
+    "            closest = vectors.most_similar(positive = pos[i])\n",
+    "        else:\n",
+    "            closest = vectors.most_similar(positive = pos[i], negative = neg[i])\n",
+    "            \n",
+    "        for c in closest:\n",
+    "            row_str += \"%s, \" %(c[0])\n",
+    "        print(\"%s \\\\\\\\\" %row_str[:-2]) # chop off last comma and space\n",
+    "        \n",
+    "    print(\"\\\\hline\")\n",
+    "    print(\"\\\\end{tabular}\")\n",
+    "    print(\"\\\\end{center}\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -1605,29 +1652,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'heck':\n",
-      "\tyeah : 0.750\n",
-      "\thell : 0.717\n",
-      "\tdamn : 0.717\n",
-      "\tmaybe : 0.716\n",
-      "\tanyway : 0.711\n",
-      "\tguess : 0.710\n",
-      "\tthing : 0.700\n",
-      "\tthink : 0.699\n",
-      "\tthats : 0.699\n",
-      "\twondering : 0.692\n"
+      "0.6183786213815452\n",
+      "0.7205178070795677\n",
+      "0.373876419738162\n"
      ]
     }
    ],
    "source": [
-    "print_closest_words(glove42, [\"heck\"])"
+    "from scipy.spatial.distance import cosine\n",
+    "print(1 - cosine(twitter100.get_vector(\"fuck\") - twitter100.get_vector(\"sex\") + twitter100.get_vector(\"poop\"), twitter100.get_vector(\"shit\")))\n",
+    "print(1 - cosine(twitter100.get_vector(\"fuck\"), twitter100.get_vector(\"shit\")))\n",
+    "print(1 - cosine(twitter100.get_vector(\"fuck\") - twitter100.get_vector(\"sex\"), twitter100.get_vector(\"shit\") - twitter100.get_vector(\"poop\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('cunt', 0.899063229560852)\n",
+      "\n",
+      "('hell', 0.9350879788398743)\n",
+      "\n",
+      "('damn', 0.9193663001060486)\n",
+      "\n",
+      "('dick', 0.876819372177124)\n",
+      "\n",
+      "('ass', 0.8838418126106262)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(twitter100.most_similar(positive=[\"twat\",\"fuck\"])[0])\n",
+    "print()\n",
+    "print(twitter100.most_similar(positive=[\"heck\",\"fuck\"])[0])\n",
+    "print()\n",
+    "print(twitter100.most_similar(positive=[\"darn\",\"fuck\"])[0])\n",
+    "print()\n",
+    "print(twitter100.most_similar(positive=[\"penis\",\"fuck\"])[0])\n",
+    "print()\n",
+    "print(twitter100.most_similar(positive=[\"butt\",\"fuck\"])[0])\n",
+    "\n",
+    "\n",
+    "#glove42.most_similar(positive=[\"king\", \"woman\"], negative=[\"man\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('apple', 0.7852500677108765),\n",
+       " ('ipad', 0.6936085820198059),\n",
+       " ('blackberry', 0.6925259828567505),\n",
+       " ('fruits', 0.6775012612342834),\n",
+       " ('ipod', 0.6417410373687744),\n",
+       " ('apples', 0.6374186277389526),\n",
+       " ('android', 0.6166089773178101),\n",
+       " ('touch', 0.6058037877082825),\n",
+       " ('banana', 0.5986943244934082),\n",
+       " ('juice', 0.5979586243629456)]"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glove42.most_similar(positive=[\"iphone\", \"fruit\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('puppies', 0.51725834608078),\n",
+       " ('terrier', 0.48469120264053345),\n",
+       " ('chihuahua', 0.46531012654304504),\n",
+       " ('rottweiler', 0.46428048610687256),\n",
+       " ('mastiff', 0.43594610691070557),\n",
+       " ('schnauzer', 0.4301396906375885),\n",
+       " ('breeders', 0.4294116795063019),\n",
+       " ('breeder', 0.42896386981010437),\n",
+       " ('dachshund', 0.4273805320262909),\n",
+       " ('pug', 0.4204758405685425)]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glove42.most_similar(positive=[\"harry\"], negative=[\"pee\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l l } \n",
+      "\\hline\n",
+      "Positives & Negatives & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{butt}, \\textbf{fuck} & \\textit{NONE} &ass, dick, bitch, shit, damn, like, hell, head, fucked, shut \\\\\n",
+      "\\textbf{twat}, \\textbf{fuck} & \\textit{NONE} &cunt, asshole, fucking, fucker, shut, stupid, bastard, shit, bitch, prick \\\\\n",
+      "\\textbf{darn}, \\textbf{fuck} & \\textit{NONE} &damn, fucking, fuckin, stupid, hell, freaking, ugh, heck, gosh, shit \\\\\n",
+      "\\textbf{heck}, \\textbf{fuck} & \\textit{NONE} &hell, damn, wtf, shit, why, yeah, dude, fucking, shut, fuckin \\\\\n",
+      "\\textbf{penis}, \\textbf{fuck} & \\textit{NONE} &dick, shit, like, bitch, fucking, that, ass, suck, hell, damn \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_closest_words_analogy_latex(twitter100, pos = [[\"butt\", \"fuck\"], [\"twat\", \"fuck\"], [\"darn\", \"fuck\"], [\"heck\", \"fuck\"], [\"penis\", \"fuck\"]], neg = [[],[],[],[], []])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l l } \n",
+      "\\hline\n",
+      "Positives & Negatives & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{fuck}, \\textbf{heck} & \\textbf{sex} & hell, dammit, eff, fuuuuck, damn, fuq, wtf, maaan, damnit, fuuuck \\\\\n",
+      "\\textbf{fuck}, \\textbf{poop} & \\textbf{sex} & fucker, poo, crap, outta, shit, shut, fucking, piss, fuckin, dumbass \\\\\n",
+      "\\textbf{fuck}, \\textbf{darn} & \\textbf{sex} & friggin, dammit, damnit, freakin, effing, goddamn, effin, fucken, freaking, damn \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_closest_words_analogy_latex(twitter100, pos=[[\"fuck\", \"heck\"], [\"fuck\", \"poop\"], [\"fuck\", \"darn\"]], neg=[[\"sex\"], [\"sex\"], [\"sex\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9183578160893526"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter100.similarity(\"fuck\", \"shit\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l l } \n",
+      "\\hline\n",
+      "Positives & Negatives & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{butt}, \\textbf{fuck} & \\textit{NONE} &ass, fucking, pussy, fucked, cock, suck, bitch, booty, cunt, porn \\\\\n",
+      "\\textbf{twat}, \\textbf{fuck} & \\textit{NONE} &cunt, pussy, fucking, asshole, ass, fucked, fucks, slut, cock, horny \\\\\n",
+      "\\textbf{darn}, \\textbf{fuck} & \\textit{NONE} &damn, fucking, shit, fuckin, thats, yeah, freaking, stupid, dude, lol \\\\\n",
+      "\\textbf{heck}, \\textbf{fuck} & \\textit{NONE} &shit, yeah, fucking, damn, hell, thats, dude, cuz, lol, guys \\\\\n",
+      "\\textbf{penis}, \\textbf{fuck} & \\textit{NONE} &fucking, cock, pussy, ass, suck, dick, cunt, sucking, sex, fucked \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_closest_words_analogy_latex(glove42, pos = [[\"butt\", \"fuck\"], [\"twat\", \"fuck\"], [\"darn\", \"fuck\"], [\"heck\", \"fuck\"], [\"penis\", \"fuck\"]], neg = [[],[],[],[], []])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'butt':\n",
+      "\tass : 0.775\n",
+      "\tbutts : 0.712\n",
+      "\tbooty : 0.690\n",
+      "\tpussy : 0.645\n",
+      "\tboobs : 0.635\n",
+      "\tcock : 0.628\n",
+      "\tarse : 0.627\n",
+      "\tbum : 0.620\n",
+      "\tasses : 0.614\n",
+      "\tpic : 0.603\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_closest_words(glove42, [\"butt\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{center}\n",
+      "\\begin{tabular}{ l l l } \n",
+      "\\hline\n",
+      "Positives & Negatives & Neighbors  \\\\\n",
+      "\\hline\n",
+      "\\textbf{cunt}, \\textbf{penis} & \\textbf{vagina} & prick, twat, bastard, dickhead, wanker, faggot, bellend, lad, fag, cunts \\\\\n",
+      "\\textbf{dick}, \\textbf{vagina} & \\textbf{penis} & pussy, bitch, ass, mouth, whore, nasty, suck, fuck, wet, shut \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\\end{center}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_closest_words_analogy_latex(twitter100, pos=[[\"cunt\", \"penis\"], [\"dick\", \"vagina\"]], neg=[[\"vagina\"], [\"penis\"]])"
    ]
   },
   {
